<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:gravity="center_horizontal"
    tools:context=".MapActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/places_autocomplete_edit_text"
        android:hint="Enter Address"
        android:padding="16dp"
        android:drawablePadding="2dp"
        android:gravity="center_vertical"
        android:background="@android:drawable/editbox_background"/>



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.80"
        android:id="@+id/map"
        tools:context=".MapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Radius:"
        android:textSize="20dp"/>


    <SeekBar
        android:id="@+id/radiusSlider"
        android:min="25"
        android:max="10000"
        android:progress="5000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectButton"
        android:layout_alignParentRight="true"
        android:text="Select Location" />







</LinearLayout>